--- a/azure/DemoWeb/Pages/Privacy.cshtml
+++ b/azure/DemoWeb/Pages/Privacy.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>simple sample app </p>
+<p>Detail your site's privacy policy.</p>
